<resources>
    <string name="app_name">TuAppGenda</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //Login
    <string name="logo">logo</string>
    <string name="TuApp">Tu AppGenda</string>
    <string name="User">Usuario</string>
    <string name="Pass">Contraseña</string>
    <string name="BTaccess">Acceder</string>
    <string name="Copyright">Copyright Diana Sequeiros Fontán</string>

    //Login
    <string name="userEmpty">Campo usuario requerido</string>
    <string name="passEmpty">Campo contraseña requerido</string>
    <string name="OK">OK</string>
    <string name="cancel">CANCELAR</string>
    <string name="ErrorLogin">Ha habido un error en la autenticación</string>
    <string name="title_activity_home">HomeActivity</string>

    //Item menu
    <string name="start">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="subjects">Asignaturas</string>
    <string name="teachers">Profesores</string>
    <string name="school">Centro</string>
    <string name="gitHub">GitHub</string>
    <string name="logout">Cerrar Sesión</string>

    //Start Fragment
    <string name="hello">Hola</string>
    <string name="whatsUp">¿Cómo llevas las clases?</string>
    <string name="plataform">Esta es la plataforma que te ayuda a recordar tus clases</string>
    <string name="show">Mostrar</string>

    //Subject Fragment
    <string name="TVScoreSubject">Nota</string>
    <string name="TVNameSubject">Asignatura</string>
    <string name="TVCourseSubject">Curso</string>
    <string name="TVYearSubject">Año</string>

    //Teacher Fragment
    <string name="TVName">Nombre</string>
    <string name="TVSurname">Apellidos</string>
    <string name="TVEmail">Email</string>
    <string name="TVCourse">Curso</string>
    <string name="TVYear">Año</string>
    <string name="TVDNI">Dni</string>

    //Logout
    <string name="logoutAlert">¿Está seguro de que desea cerrar sesión?</string>

    //School
    <string name="center_data">Datos del centro</string>
    <string name="center_education">Centro de formación</string>
    <string name="center_direction">C/ Pedro Salinas, 11 28043 Madrid</string>
    <string name="center_phone">Tel. 91 538 38 38</string>
    <string name="center_mail">infoformacion@camaramadrid.es</string>

    //Profile
    <string name="info_profile">Información del perfil</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="save_profile">Guardar perfil</string>
    <string name="error_profile">Ha habido un error al cargar el perfil</string>

    <string name="ErrorInfo">Ha ocurrido un error inesperado al recuperar los datos.</string>

</resources>