<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/idStart"
            android:icon="@drawable/home"
            android:title="@string/start"/>

        <item
            android:id="@+id/idProfile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/idSubject"
            android:icon="@drawable/subject"
            android:title="@string/subjects" />

        <item
            android:id="@+id/idTeacher"
            android:icon="@drawable/teachers"
            android:title="@string/teachers" />

        <item
            android:id="@+id/idSchool"
            android:icon="@drawable/school"
            android:title="@string/school" />

        <item
            android:id="@+id/idGitHub"
            android:icon="@drawable/github"
            android:title="@string/gitHub" />

        <item
            android:id="@+id/idLogout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>
</menu>