<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".screens.subject.SubjectFragment" >


    <TextView
        android:id="@+id/idTVScoreSubject"
        style="@style/white_title_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/TVScoreSubject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTVnameSubject"
        style="@style/white_title_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/TVNameSubject"
        app:layout_constraintStart_toEndOf="@+id/idTVScoreSubject"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTVCourseSubject"
        style="@style/white_title_lists"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/TVCourseSubject"
        app:layout_constraintEnd_toStartOf="@+id/idTVYearSubject"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTVYearSubject"
        style="@style/white_title_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/TVYearSubject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/idListSubjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVScoreSubject">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>